First iteration of listings uusd functionality

--- a/orange/ussd/matimela.html
+++ b/orange/ussd/matimela.html
@@ -3,7 +3,7 @@
 <body>
 Please enter your cattle brand:<br/>
 <form action="/matimela">
-    <input type="text" name="cattle-brand"/>
+    <input type="text" name="response"/>
 </form>
 </body>
 </html>
