Improving subscribe functionality

--- a/orange/ussd/subscribe.html
+++ b/orange/ussd/subscribe.html
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html>
 <body>
+FarmConnecta
+
 Let us tell you each time someone posts something you want to buy.
 Please enter the keyword you are interested in, for example goats, cattle etc. One keyword only.:<br/>
 <form action="/subscribe">
