Added response pages to subscribe and matimela USSD

--- a/orange/ussd/subscribe-error.html
+++ b/orange/ussd/subscribe-error.html
@@ -4,7 +4,7 @@
     <meta name="nav" content="end"/>
 </head>
 <body>
-An error occurred. You probably have insufficient balance. Recharge and try again.<br/>
+An error occurred. You probably have insufficient balance. Recharge and try again.<br>
 Thank you!
 </body>
 </html>
