--- a/orange/ussd/subscribe-success.html
+++ b/orange/ussd/subscribe-success.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-You have successfully subscribed.
-Thank you for using FarmConnecta<br/>
+You have successfully subscribed.<br>
+Thank you for using FarmConnecta
 </body>
 </html>
